--- a/code/.env
+++ b/code/.env
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 GOOGLE_DICTIONARY_API=api.dictionaryapi.dev/api/v2/entries
 WIKIPEDIA_DICTIONARY_API=wikipedia.org/w/api.php
 
-DICTIONARY_API=http://game_web/api/dictionary
-CROSSWORD_API=http://game_web/api/crossword
+DICTIONARY_API=http://localhost:1000/api/dictionary
+CROSSWORD_API=http://localhost:1000/api/crossword
 
 ###> symfony/messenger ###
 # Choose one of the transports below
@@ -42,3 +42,6 @@ MESSENGER_TRANSPORT_DSN=amqp://rabbitmq:rabbitmq@game_rabbit:5672/%2f
 #
  DATABASE_URL="sqlite:///%kernel.project_dir%/var/database/db.sqlite"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+
+# nickname = admin
+# password = 111password
